0.4.17 (in development)
------------------------------------------------------------------------
- Feature: [#23166] Add Galician translation.
- Feature: [#23227] Add Classic Wooden Twister roller coaster, for better compatibility with RCT1.
- Improved: [#23051] Add large sloped turns and new inversions to the Twister, Vertical Drop, Hyper and Flying Roller Coasters.
- Improved: [#23123] Improve sorting of roller coasters in build new ride menu.
- Improved: [#23211] Add boosters to classic wooden roller coaster (cheats only).
- Improved: [#23233] Add diagonal booster to LSM Launched Coaster.
- Fix: [#22726] ‘Force park rating’ cheat is not saved with the park.
- Fix: [#23206] Multiplayer desyncs when FPS is uncapped.
- Fix: [#23238] Updating a guest’s favourite ride works differently from vanilla RCT2.
- Fix: [objects#355] Fix colour preset settings of the Stand-Up Roller Coaster trains.
- Fix: [objects#355] Fix colour preset settings of many vehicles from Wacky Worlds and Time Twister.

0.4.16 (2024-11-03)
------------------------------------------------------------------------
- Feature: [#22797] New ride type: LSM Launched Roller Coaster.
- Improved: [#22937] Add banked sloped turns and many other pieces to the Corkscrew, Hypercoaster and Lay-down Roller Coaster.
- Improved: [#22967] Add medium and large half loops to the Wooden and Classic Wooden Roller Coasters.
- Improved: [#23010] Make AppImage compatible with Ubuntu 22.04 and Debian Bookworm again.
- Change: [#20810] Giga Coaster boosters and launched lift hill track pieces are now locked behind cheats.
- Fix: [#21221] Trains use unbanked sprites on flat to gentle diagonal banked track pieces.
- Fix: [#22615] Crash when drawing Space Rings with an invalid ride entry.
- Fix: [#22633] Crash when drawing loading screen with an outdated g2.dat.
- Fix: [#22908] Crash when passing through a door from an invalid wall type.
- Fix: [#22918] Zooming with keyboard moves the view off centre.