@@ -210,6 +210,10 @@ namespace OpenRCT2::GameActions
 
         if (result.Error == GameActions::Status::Ok)
         {
+#ifdef ENABLE_SCRIPTING
+            if (topLevel)
+                GetContext()->GetScriptEngine().RunMoneySpendHooks(result.Cost, result.Expenditure);
+#endif
             if (!FinanceCheckAffordability(result.Cost, action->GetFlags()))
             {
                 result.Error = GameActions::Status::InsufficientFunds;
@@ -361,6 +365,8 @@ namespace OpenRCT2::GameActions
             if (result.Error == GameActions::Status::Ok)
             {
                 auto& scriptEngine = GetContext()->GetScriptEngine();
+                if (topLevel)
+                    scriptEngine.RunMoneySpendHooks(result.Cost, result.Expenditure);
                 scriptEngine.RunGameActionHooks(*action, result, true);
                 // Script hooks may now have changed the game action result...
             }
